Bug 251296 - using the new event view by keyboard, in the date field the up arrow adds +1 to the day, in the time field the down arrow key adds +1 to the minute
Summary: using the new event view by keyboard, in the date field the up arrow adds +1 ...
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.9
Platform: Debian stable Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-15 11:33 UTC by Wolfram R. Sieber
Modified: 2010-10-02 20:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wolfram R. Sieber 2010-09-15 11:33:49 UTC
Version:           0.9 (using KDE 1.2) 
OS:                Linux

Using the new event view by keyboard, in the date field the up arrow adds +1 to the day, in the time field the down arrow key adds +1 to the minute. 

By means of usability/intuitivity the behaviour of both these fields should match each other. Currently their behaviour is the opposite of each other.

Reproducible: Always

Steps to Reproduce:
Create a new event, tab through to the date/time fields, hit arrow-up/down key there. Compare the behaviour of the date and time fields.

Actual Results:  
in date field arrow-up adds +1 day, in time field arrow-up subtracts 1 minute

Expected Results:  
in date field arrow-up adds +1 day, in time field arrow-up adds +1 minute

OS: Linux (i686) release 2.6.26-2-686
Compiler: Target: i486-linux-gnu
Comment 1 Wolfram R. Sieber 2010-09-15 11:35:47 UTC
I don't know why the report says "KDE 1.2". I'm actually using 3.5.9.
Comment 2 Allen Winter 2010-09-30 23:05:50 UTC
Wow, I never noticed this before.
happens in KDE4 versions too.
Comment 3 Allen Winter 2010-10-02 16:47:30 UTC
SVN commit 1181855 by winterz:

for UI consistency:
the up arrow and the [PageUp] keys increase time
the down arrow and the [PageDown] keys decrease time.

how nobody noticed this for so many years?
BUG: 251296
MERGE: 4.4,4.5,trunk


 M  +4 -4      ktimeedit.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1181855
Comment 4 Allen Winter 2010-10-02 16:54:45 UTC
I will commit the fix to all active kdepim versions.
Version 3.5.9 is no longer supported nor active, so you won't get it.

but thanks for reporting anyway
Comment 5 Wolfram R. Sieber 2010-10-02 20:19:46 UTC
Thanks for fixing it so quickly. :)