for UI consistency: the up arrow and the [PageUp] keys increase time the down arrow and the [PageDown] keys decrease time.

how nobody noticed this for so many years?
BUG: 251296
MERGE: 4.4,4.5,trunk

svn path=/branches/kdepim/enterprise/kdepim/; revision=1181855